2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-01
	* set default esConnect string in OnlineConverter to localhost, as
	requested by David Dykstra

2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-00
	* udpate schema and code for new int64 parameters

2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-11
	* browser/WebContent/get.jsp: change default for 'format' to
	'python' (was: 'ascii')

2008-09-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-10
	* fix OM dialog (reported by Tulika)

2008-09-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-09
	* add ErrorStreamFileWriter to SM configuration in
	confdb.converter.OnlineConverter

2008-09-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-08
	* first release of confdb.db.ConfDBCreateConfig and
	test/runCreateConfig

2008-09-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-07
	* improvements to OutputModuleDialog, requested by Bryan&Tulika
	* add triggerTriggerEventWithRefs checkbox
	* add rawDataCollector to the FEDRawDataCollection keep-statement
	* replace all occurences of 'rawDataCollector' in any [v]string
	parameter value with 'source'
	* order products alphabetically in the table

2008-08-27  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-25-06 * fix to offline2online to avoid null pointer
	exception when replacing globalTag * fix to parser to bail out if
	source filesystem becomes inaccessible during parsing

2008-08-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-05
	* another lil fix to offline2online

2008-08-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-04
	* fixes to offline2online conversion procedure, reported by Andre.

2008-08-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

        * tag V00-25-03